lang/transcription overlap fixed

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -27,6 +27,7 @@ body {
 
 button {
 	.font-sans-serif;
+	.transition;
 
 	background: @aquamarine;
 	color: white;
@@ -357,7 +358,7 @@ button {
 			display: inline-block;
 			font-weight: bold;
 			padding: 4px 10px;
-			width: 175px;
+			min-width: 175px;
 		}
 
 		.word {
